# SunnitAI-BE

./: .dockerignore  .env.example  .env.local.example  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.old  README.md  RELEASE.md  deploy.sh  entrypoint-unified.sh  note.md  pyproject.toml  release.sh  requirements.txt  test_neo4j.py
.cursor/rules/: development-flow.mdc  directives.mdc  obbiettivo.mdc
aks/: HPA.yaml  deployment.yaml  rbac-dev-kubectl-exec.yaml  service-account.yaml
aks/configs/: configmap-dev.yaml  configmap-test.yaml
aks/ingress/: ingress-controller.yaml  secret-provider-app.yaml  secret-provider.yaml
docs/: analisi-blocchi-be-functions.md  api-reference.md  azurite-workaround-feasibility.md  blob-storage-commands.md  endpoints-api.md  openapi.yaml  permessi-storage-analisi-pdf.md  postman-testing-guide.md  refactor-durable-to-job-polling.md
reports/: token-v2-analysis-2026-02-05.md  token-v2-fix-options-2026-02-05.md
scripts/: activate-pim-roles.sh  assign-aks-rbac-admin.sh  assign-storage-roles.sh  check-document-json-in-blob.py  confronti-attuativi-pairs.txt  fetch_secrets.py  github-create-empty-repo.ps1  hot-reload.sh  pod-bashrc  postprocess-confronti-xlsx.py  run-analisi-recursive.py  run-confronti-attuativi-auto.ps1  run-confronti-attuativi.ps1  scaffolding.sh  test_pipeline.py
src/be/: placeholder
src/be/azure-durable-function/: .env.example  .gitignore  README.md  api.yaml  azure-pipelines.yml  azure_func_compat.py  function_app.py  host.json  job_store.py  local.settings.json  main.py  requirements.txt  test-formdata.py  test_locks.py  upload-test-files.py
src/be/azure-durable-function/mock/: GetAllScopes.json  GetAllTopics.json  GetlastDocInfo.json
src/be/azure-durable-function/tests/: conftest.py  test_activities.py  test_api_endpoints.py  test_blob_refactor.py  test_job_store.py
src/be/requirement_extration/: .dockerignore  .env.example  .gitignore  README.md  amendment_system_prompt.txt  call_fast_api.py  compare_requirements_json.py  extration_utils.py  fast_api.service  json2html.py  parametersLLAMA.json  promptHeader.txt  prompt_message.txt  promptfull.txt  requirement_analyzer.py  requirement_extraction.py  requirements.txt  run_fast_api_as_deamon.sh  searchAI_fulltext.py  system_prompt.txt
src/be/requirement_extration/analysis_v2/: test_matches.json
src/be/requirement_extration/requirement_extration/: .env.example  Dockerfile  amendment_user_prompt.txt  call_fast_api.py  compare_requirements_json.py  llama_mod.py  requirement_analyzer.py  requirement_extraction.py  requirements.txt  run_fast_api_as_deamon.sh  searchAI_fulltext.py  utils.py
src/be/requirement_extration/requirement_extration/tests/: test_call_fast_api.py  test_requirement_analyzer.py  test_requirement_extraction.py
src/be/requirement_extration/requirement_extration/tests/test_data/: mock_json1.json  mock_json2.json
src/be/requirement_extration/tests/: test_compare_requirements_json.py  test_requirement_analyzer.py
src/be/requirement_extration/tests/test_data/: mock_normative.json
src/be/src/lex_package/: README.md  __init__.py  analisi.py  analisi_parallel.py  arricchimento_parti.py  cli.py  emendativa-test.json  emendativa_confronto.py  parse.py  schema_attuativo.py  versioning_confronto.py  watcher.py
src/be/src/lex_package/config/: features.json
src/be/src/lex_package/confronto_search/: README.md  chunk_generator.py  chunk_indexer.py  chunk_retriever.py  search_confronto.py  utils.py
src/be/src/lex_package/confronto_search/test/: test1_basic_search.json  test2_document_filter.json  test3_cdp_chunks.json  test4_semantic_vs_traditional.json  test5_chapter_search.json  test_azure_searchai.py  test_chunk_search.py  test_chunks.py  test_insert_deep.py  utils_test.py
src/be/src/lex_package/llm/: factory.py
src/be/src/lex_package/parsing_utils/: document_part.py  document_profiler.py  document_types.py  parser_annex_tabular.py  parser_articolo.py  parser_banca.py  parser_bancaditalia.py  parser_boe.py  parser_capitolo.py  parser_docs_senza_indice.py  parser_gazzetta_ue.py  parser_general.py  parser_indice.py  parser_regolamento.py
src/be/src/lex_package/t/: analisi_articolo.py  comparazione_normativa.py  document_metadata.py  graph_enrichment.py  part_enrichment.py  similarity.py  similarity_minimal.py  typed_dicts.py
src/be/src/lex_package/utils/: __init__.py  basic_utils.py  confronto_metadata.py  confronto_xlsx_vista.py  embeddings.py  flatten.py  graph_enrichment.py  graph_writer.py  integrazione_confronto_attuativo.py  metadata_extraction.py  normalize_articoli_tree.py  retry_progress.py  runtime_checks.py  text_canonical.py  to_xlsx.py  utils.py  utils_comparison.py
src/be/src/lex_package/utils/prompts/: analisi.txt  (+9 more)
src/core/: __init__.py  bootstrap.py  settings.py
src/utils/: __init__.py  azure_credentials.py  blob_storage_client.py  blob_storage_provider.py  llm_provider.py
(+7 files in other folders)
